--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.453.0",
+		"mode-watcher": "^0.4.1"
 	}
 }
