--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@octokit/rest": "^21.0.2",
+		"axios": "^1.7.7",
 		"lucide-svelte": "^0.453.0",
 		"mode-watcher": "^0.4.1"
 	}
