--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@octokit/core": "^6.1.2",
 		"@octokit/rest": "^21.0.2",
 		"axios": "^1.7.7",
 		"lucide-svelte": "^0.453.0",
