--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"@octokit/core": "^6.1.2",
 		"@octokit/rest": "^21.0.2",
+		"@tanstack/svelte-query": "^5.59.16",
 		"axios": "^1.7.7",
 		"date-fns": "^4.1.0",
 		"mode-watcher": "^0.4.1"
